# topk_tpu_test

./: .gitignore  README.md  compare_exact_topk.py  exact_topk_impls.py  fast_exact_topk_tpu.py  pyproject.toml
fast_exact_topk_core/: __init__.py  symint.py  utils.py
fast_exact_topk_core/bitonic/: __init__.py  sort.py  topk.py
fast_exact_topk_core/divide_and_filter_topk/: __init__.py
standalone_kernels/: README.md  __init__.py  bitonic_sort.py  bucket_select.py  common.py  fixed_shape_bitonic_v6.py  iterative_mask.py  soft_sinkhorn.py  topk_custom_call_mimic.py  topk_custom_call_mimic_results.md  xla_reference.py
