[project]
name = "topk_test_on_tpu"
version = "0.1.0"
description = "Fast exact top-k algorithm implementation for TPU using JAX and Pallas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.3.1",
    "pandas==2.3.0",
    "scikit_learn==1.7.0",
    "scipy==1.16.0",
    "transformers==4.53.0",
    "einops==0.8.1",
    "flax",
    "optax",
    "jax[tpu]",
]
