[project]
name = "topk_test_on_tpu"
version = "0.1.0"
description = "Exact top-k comparison on TPU for MoE, sparse attention, and vocab decoding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.3.1",
    "scipy",
    "jax[tpu]; platform_system == 'Linux'",
    "jax; platform_system != 'Linux'",
]
